# django-api-bouncer

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
api_bouncer/: __init__.py  admin.py  apps.py  models.py  schemas.py  serializers.py  urls.py  validators.py  views.py
api_bouncer/middleware/: acl.py  bouncer.py  ip_restriction.py  key_auth.py  request_termination.py
api_bouncer/middlewares/: ip_restriction.py  key_auth.py  request_termination.py
api_bouncer/migrations/: 0001_initial.py  0002_consumer_acls.py
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  install.html  objects.inv  search.html  searchindex.js
docs/_sources/: install.rst.txt
docs/_sources/tutorial/: tutorial.rst.txt  tutorial_01.rst.txt  tutorial_03.rst.txt
docs/tutorial/: tutorial.html  tutorial_01.html  tutorial_02.html  tutorial_02.rst  tutorial_03.html
tests/: settings.py  test_apis.py  test_bouncer.py  test_consumer.py  test_consumer_acls.py  test_consumer_keys.py  test_middleware_acl.py  test_middleware_ip_restriction.py  test_middleware_key_auth.py  test_middleware_request_termination.py  test_plugin.py  urls.py
