[metadata]
name = django-api-bouncer
version = 0.3
description = A simple API Gateway app for Django
author = Aristobulo Meneses
author_email = aristobulo@menecio.me
url = https://github.com/menecio/django-api-bouncer
download_url = https://github.com/menecio/django-api-bouncer/tarball/master
keywords = django, rest, api, gateway
classifiers =
	Environment :: Web Environment
        Framework :: Django
        Framework :: Django :: 1.11
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Topic :: Internet :: WWW/HTTP
        Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
        django >= 1.10
        jsonschema >= 2.6.0
        requests >= 2.18.1
	psycopg2 >= 2.7.1
        djangorestframework >= 3.6.3

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
